fixed toc align problem

--- a/src/components/common/ui/toc/toc.module.css
+++ b/src/components/common/ui/toc/toc.module.css
@@ -2,6 +2,7 @@
 	position: fixed;
 	top: var(--sp-5);
 	left: 50%;
+	right: 50%;
 	z-index: 50;
 	display: flex;
 	align-items: center;
